fixed PLP on mobile

--- a/src/app/design/frontend/Scandiweb/pwa/src/app/component/CategorySort/CategorySort.style.scss
+++ b/src/app/design/frontend/Scandiweb/pwa/src/app/component/CategorySort/CategorySort.style.scss
@@ -10,6 +10,8 @@
  */
 
 .CategorySort {
+    display: none;
+
     @include after-mobile {
         margin-left: auto;
         min-width: 15rem;
