--- a/src/app/design/frontend/Scandiweb/pwa/src/app/component/ProductCard/ProductCard.style.scss
+++ b/src/app/design/frontend/Scandiweb/pwa/src/app/component/ProductCard/ProductCard.style.scss
@@ -20,6 +20,8 @@
     min-width: 0;
 
     &-Hero {
+        width: 106%;
+        left: -3%;
         grid-column: span 2;
         grid-row: span 2;
 
